compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__numbers__numbers_with_underscores.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/numbers.rs
assertion_line: 5
expression: "\npub fn main() {\n  100_000\n  100_000.00101\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  100_000
  100_000.00101
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> float().
main() ->
    100000,
    100000.00101.
