compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__numbers__numbers_with_underscores1.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/numbers.rs
assertion_line: 17
expression: "\nconst i = 100_000\nconst f = 100_000.00101\npub fn main() {\n  i\n  f\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

const i = 100_000
const f = 100_000.00101
pub fn main() {
  i
  f
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 4).
-spec main() -> float().
main() ->
    100000,
    100000.00101.
