compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__numbers__repeated_int_negation.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/numbers.rs
assertion_line: 71
expression: "\npub fn main() {\n  let a = 3\n  let b = --a\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let a = 3
  let b = --a
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    A = 3,
    B = - - A.
