compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__numbers__zero_b_in_hex.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/numbers.rs
assertion_line: 84
expression: "\npub fn main() {\n  0xffe0bb\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  0xffe0bb
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    16#ffe0bb.
